# personal-finance-assistant

./: README.md  docker-compose.yaml  pyproject.toml
src/: dockerfile.data-store-service  dockerfile.nim-service  main.py  requirements-data-store-service.txt  requirements-nim-service.txt
src/agentic_service/: .env.copy  langgraph_agent.py
src/app/: endpoint_product.py  endpoint_transaction.py  router.py
src/data_model/: product_model.py  transaction_model.py
src/personal_finance_assistant/: personal_finance_assistant_function.py  register.py
src/personal_finance_assistant/configs/: config.yml
